--- a/assignment0/proj0/index.html
+++ b/assignment0/proj0/index.html
@@ -383,13 +383,13 @@ This has been a truly insightful conversation. Thank you for sharing your valuab
 </code></pre>
 <h2 id="task-2-3d-shape-images">Task 2. 3D shape images</h2>
 <p><a href="https://en.wikipedia.org/wiki/Klein_bottle">Klein bottle</a></p>
-<p><img src="file:////home/liver/CMUbuntu/L3D/16825-L3D/assignment0/proj0/kettle.png" alt="bottle"></p>
+<p><img src="kettle.png" alt="bottle"></p>
 <p><a href="https://m.media-amazon.com/images/I/91MIQG6CL9L.jpg">Source</a></p>
 <p><a href="https://en.wikipedia.org/wiki/Prince_Rupert%27s_drop">Prince Rupert's drop</a></p>
-<p><img src="file:////home/liver/CMUbuntu/L3D/16825-L3D/assignment0/proj0/1.webp" alt="bottle"></p>
+<p><img src="1.webp" alt="drop"></p>
 <p><a href="https://rupertsdrops.com/products/prince-ruperts-drop">Source</a></p>
 <h2 id="task-3-funny-gifs">Task 3. Funny GIFs</h2>
-<p><img src="file:////home/liver/CMUbuntu/L3D/16825-L3D/assignment0/proj0/clown.gif" alt="clown"></p>
+<p><img src="clown.gif" alt="clown"></p>
 <p><a href="https://www.bilibili.com/video/BV1yu4y1q7Ha/?share_source=copy_web&amp;vd_source=9b15eec568ded31d679724530833e5e4">Source</a></p>
 
             
